Added a menu item under Help to get to the Updates section of Options. Added a hotkey for Options (F4).
--HG--
branch : beta

--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -531,4 +531,7 @@
 	<data name="CloseVideoSourceMenuItem" xml:space="preserve">
     <value>Close Video Source</value>
   </data>
+	<data name="UpdatesMenuItem" xml:space="preserve">
+    <value>Updates...</value>
+  </data>
 </root>
