Finishing range control changes. Updated "Seconds" to "Time range" with H:MM:SS format. Increased precision on time calculation for titles and chapters.
--HG--
branch : beta

--- a/VidCoder/Resources/EnumsRes.resx
+++ b/VidCoder/Resources/EnumsRes.resx
@@ -187,6 +187,6 @@
     <value>Frames</value>
   </data>
   <data name="VideoRangeType_Seconds" xml:space="preserve">
-    <value>Seconds</value>
+    <value>Time Range</value>
   </data>
 </root>
