--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -540,4 +540,7 @@
   <data name="RangeBarToolTip" xml:space="preserve">
     <value>Left-click to set the start time and right-click to set the end time.</value>
   </data>
+  <data name="Preset_WindowsPhone8" xml:space="preserve">
+    <value>Windows Phone 8</value>
+  </data>
 </root>
