--- a/VidCoder/Resources/MainRes.hu.resx
+++ b/VidCoder/Resources/MainRes.hu.resx
@@ -534,4 +534,22 @@
   <data name="UpdatesMenuItem" xml:space="preserve">
     <value>Frissítések...</value>
   </data>
+  <data name="CbrAuto" xml:space="preserve">
+    <value>CBR Auto</value>
+  </data>
+  <data name="RangeBarToolTip" xml:space="preserve">
+    <value>Bal klikkel az indulási, jobb klikkel a befejezési idő adható meg.</value>
+  </data>
+  <data name="Preset_WindowsPhone8" xml:space="preserve">
+    <value>Windows Phone 8</value>
+  </data>
+  <data name="QueueFormat_Chapters" xml:space="preserve">
+    <value>{0}. fejezet</value>
+  </data>
+  <data name="QueueFormat_Frames" xml:space="preserve">
+    <value>{0}-{1}. képkocka</value>
+  </data>
+  <data name="QueueRangeAll" xml:space="preserve">
+    <value>Mind</value>
+  </data>
 </root>
