Individual encode jobs now log to a separate file as well as the main consolidated file. Added the option to copy the encode job log to the same output folder as the encoded video. Added a button to open the log folder to the Options dialog.
--HG--
branch : beta

--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -552,4 +552,13 @@
 	<data name="QueueRangeAll" xml:space="preserve">
     <value>All</value>
   </data>
+	<data name="CouldNotCopyLogError" xml:space="preserve">
+    <value>Could not copy log:{0}{0}{1}</value>
+  </data>
+	<data name="OpenLog" xml:space="preserve">
+    <value>Open Log</value>
+  </data>
+	<data name="CopyLog" xml:space="preserve">
+    <value>Copy Log</value>
+  </data>
 </root>
