--- a/VidCoder/Resources/MainRes.hu.resx
+++ b/VidCoder/Resources/MainRes.hu.resx
@@ -552,4 +552,13 @@
   <data name="QueueRangeAll" xml:space="preserve">
     <value>Mind</value>
   </data>
+  <data name="CouldNotCopyLogError" xml:space="preserve">
+    <value>Nem sikerült a napló másolása:{0}{0}{1}</value>
+  </data>
+  <data name="OpenLog" xml:space="preserve">
+    <value>Napló megnyitása</value>
+  </data>
+  <data name="CopyLog" xml:space="preserve">
+    <value>Napló másolása</value>
+  </data>
 </root>
