--- a/VidCoder/Resources/SubtitleRes.hu.resx
+++ b/VidCoder/Resources/SubtitleRes.hu.resx
@@ -1,76 +1,96 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
-		Microsoft ResX Schema
+    Microsoft ResX Schema 
+    
+    Version 2.0
+    
+    The primary goals of this format is to allow a simple XML format 
+    that is mostly human readable. The generation and parsing of the 
+    various data types are done through the TypeConverter classes 
+    associated with the data types.
+    
+    Example:
+    
+    ... ado.net/XML headers & schema ...
+    <resheader name="resmimetype">text/microsoft-resx</resheader>
+    <resheader name="version">2.0</resheader>
+    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
+    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
+    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
+        <value>[base64 mime encoded serialized .NET Framework object]</value>
+    </data>
+    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
+        <comment>This is a comment</comment>
+    </data>
+                
+    There are any number of "resheader" rows that contain simple 
+    name/value pairs.
+    
+    Each data row contains a name, and value. The row also contains a 
+    type or mimetype. Type corresponds to a .NET class that support 
+    text/value conversion through the TypeConverter architecture. 
+    Classes that don't support this are serialized and stored with the 
+    mimetype set.
+    
+    The mimetype is used for serialized objects, and tells the 
+    ResXResourceReader how to depersist the object. This is currently not 
+    extensible. For a given mimetype the value must be set accordingly:
+    
+    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    that the ResXResourceWriter will generate, however the reader can 
+    read any of the formats listed below.
+    
+    mimetype: application/x-microsoft.net.object.binary.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
+            : and then encoded with base64 encoding.
+    
+    mimetype: application/x-microsoft.net.object.soap.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
+            : and then encoded with base64 encoding.
 
-		Version 1.3
-
-		The primary goals of this format is to allow a simple XML format 
-		that is mostly human readable. The generation and parsing of the 
-		various data types are done through the TypeConverter classes 
-		associated with the data types.
-
-		Example:
-
-		... ado.net/XML headers & schema ...
-		<resheader name="resmimetype">text/microsoft-resx</resheader>
-		<resheader name="version">1.3</resheader>
-		<resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-		<resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
-		<data name="Name1">this is my long string</data>
-		<data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
-		<data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
-			[base64 mime encoded serialized .NET Framework object]
-		</data>
-		<data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-			[base64 mime encoded string representing a byte array form of the .NET Framework object]
-		</data>
-
-		There are any number of "resheader" rows that contain simple 
-		name/value pairs.
-
-		Each data row contains a name, and value. The row also contains a 
-		type or mimetype. Type corresponds to a .NET class that support 
-		text/value conversion through the TypeConverter architecture. 
-		Classes that don't support this are serialized and stored with the 
-		mimetype set.
-
-		The mimetype is used for serialized objects, and tells the 
-		ResXResourceReader how to depersist the object. This is currently not 
-		extensible. For a given mimetype the value must be set accordingly:
-
-		Note - application/x-microsoft.net.object.binary.base64 is the format 
-		that the ResXResourceWriter will generate, however the reader can 
-		read any of the formats listed below.
-
-		mimetype: application/x-microsoft.net.object.binary.base64
-		value   : The object must be serialized with 
-			: System.Serialization.Formatters.Binary.BinaryFormatter
-			: and then encoded with base64 encoding.
-
-		mimetype: application/x-microsoft.net.object.soap.base64
-		value   : The object must be serialized with 
-			: System.Runtime.Serialization.Formatters.Soap.SoapFormatter
-			: and then encoded with base64 encoding.
-
-		mimetype: application/x-microsoft.net.object.bytearray.base64
-		value   : The object must be serialized into a byte array 
-			: using a System.ComponentModel.TypeConverter
-			: and then encoded with base64 encoding.
-	-->
+    mimetype: application/x-microsoft.net.object.bytearray.base64
+    value   : The object must be serialized into a byte array 
+            : using a System.ComponentModel.TypeConverter
+            : and then encoded with base64 encoding.
+    -->
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
       <xsd:complexType>
         <xsd:choice maxOccurs="unbounded">
+          <xsd:element name="metadata">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" />
+              </xsd:sequence>
+              <xsd:attribute name="name" use="required" type="xsd:string" />
+              <xsd:attribute name="type" type="xsd:string" />
+              <xsd:attribute name="mimetype" type="xsd:string" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="assembly">
+            <xsd:complexType>
+              <xsd:attribute name="alias" type="xsd:string" />
+              <xsd:attribute name="name" type="xsd:string" />
+            </xsd:complexType>
+          </xsd:element>
           <xsd:element name="data">
             <xsd:complexType>
               <xsd:sequence>
                 <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
                 <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
               </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" msdata:Ordinal="1" />
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
               <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
               <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+              <xsd:attribute ref="xml:space" />
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="resheader">
@@ -89,66 +109,69 @@
     <value>text/microsoft-resx</value>
   </resheader>
   <resheader name="version">
-    <value>1.3</value>
+    <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="SubtitlesWindowTitle">
-    <value xml:space="preserve">Feliratok</value>
+  <data name="SubtitlesWindowTitle" xml:space="preserve">
+    <value>Feliratok</value>
   </data>
-  <data name="RemoveSubtitleTrack">
-    <value xml:space="preserve">Feliratsáv eltávolítása</value>
+  <data name="RemoveSubtitleTrack" xml:space="preserve">
+    <value>Feliratsáv eltávolítása</value>
   </data>
-  <data name="SubtitlesFromSourceLabel">
-    <value xml:space="preserve">Felirat forrása:</value>
+  <data name="SubtitlesFromSourceLabel" xml:space="preserve">
+    <value>Felirat forrása:</value>
   </data>
-  <data name="QuickTimeSubtitlesWarning">
-    <value xml:space="preserve">Lehetséges, hogy a szöveges feliratok nem jelennek meg Quicktime esetében, kivéve ha az .m4v kiterjesztést használod.</value>
+  <data name="QuickTimeSubtitlesWarning" xml:space="preserve">
+    <value>Lehetséges, hogy a szöveges feliratok nem jelennek meg Quicktime esetében, kivéve ha az .m4v kiterjesztést használod.</value>
   </data>
-  <data name="NameColumn">
-    <value xml:space="preserve">Név</value>
+  <data name="NameColumn" xml:space="preserve">
+    <value>Név</value>
   </data>
-  <data name="DefaultColumn">
-    <value xml:space="preserve">Alapértelmezett</value>
+  <data name="DefaultColumn" xml:space="preserve">
+    <value>Alapértelmezett</value>
   </data>
-  <data name="ForcedOnlyColumn">
-    <value xml:space="preserve">Csak kényszerített</value>
+  <data name="ForcedOnlyColumn" xml:space="preserve">
+    <value>Csak kényszerített</value>
   </data>
-  <data name="BurnedInColumn">
-    <value xml:space="preserve">Ráégetett</value>
+  <data name="BurnedInColumn" xml:space="preserve">
+    <value>Ráégetett</value>
   </data>
-  <data name="ExternalSubtitlesLabel">
-    <value xml:space="preserve">Külső feliratok:</value>
+  <data name="ExternalSubtitlesLabel" xml:space="preserve">
+    <value>Külső feliratok:</value>
   </data>
-  <data name="FileColumn">
-    <value xml:space="preserve">Fájl</value>
+  <data name="FileColumn" xml:space="preserve">
+    <value>Fájl</value>
   </data>
-  <data name="LanguageColumn">
-    <value xml:space="preserve">Nyelv</value>
+  <data name="LanguageColumn" xml:space="preserve">
+    <value>Nyelv</value>
   </data>
-  <data name="CharCodeColumn">
-    <value xml:space="preserve">Karakter kód</value>
+  <data name="CharCodeColumn" xml:space="preserve">
+    <value>Karakter kód</value>
   </data>
-  <data name="OffsetColumn">
-    <value xml:space="preserve">Eltolás (ms)</value>
+  <data name="OffsetColumn" xml:space="preserve">
+    <value>Eltolás (ms)</value>
   </data>
-  <data name="ImportSrtButton">
-    <value xml:space="preserve">.srt fájl importálása...</value>
+  <data name="ImportSrtButton" xml:space="preserve">
+    <value>.srt fájl importálása...</value>
   </data>
-  <data name="BurnedOverlapWarning">
-    <value xml:space="preserve">Az egyéb feliratsávok átfedik a ráégetett feliratokat.</value>
+  <data name="BurnedOverlapWarning" xml:space="preserve">
+    <value>Az egyéb feliratsávok átfedik a ráégetett feliratokat.</value>
   </data>
-  <data name="ForeignAudioSearch">
-    <value xml:space="preserve">Idegen hangkeresés</value>
+  <data name="ForeignAudioSearch" xml:space="preserve">
+    <value>Idegen hangkeresés</value>
   </data>
-  <data name="AddSourceNoSubtitlesToolTip">
-    <value xml:space="preserve">A forrásvideón nem található felirat.</value>
+  <data name="AddSourceNoSubtitlesToolTip" xml:space="preserve">
+    <value>A forrásvideón nem található felirat.</value>
   </data>
-  <data name="SrtFilePickerText">
-    <value xml:space="preserve">Feliratfájl hozzáadása</value>
+  <data name="SrtFilePickerText" xml:space="preserve">
+    <value>Feliratfájl hozzáadása</value>
+  </data>
+  <data name="DuplicateSubtitleTrack" xml:space="preserve">
+    <value>Duplikálja ezt a sávot</value>
   </data>
 </root>
