--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -334,7 +334,7 @@
     <value>Stopped encoding.</value>
   </data>
   <data name="DeleteSourceFilesConfirmationMessage" xml:space="preserve">
-    <value>Are you sure you want to delete {0} source file(s)?</value>
+    <value>Are you sure you want to delete {0} source file(s)/folder(s)?</value>
   </data>
   <data name="DeleteSourceFilesConfirmationTitle" xml:space="preserve">
     <value>Confirm delete</value>
@@ -543,28 +543,28 @@
   <data name="Preset_WindowsPhone8" xml:space="preserve">
     <value>Windows Phone 8</value>
   </data>
-	<data name="QueueFormat_Chapters" xml:space="preserve">
+  <data name="QueueFormat_Chapters" xml:space="preserve">
     <value>Ch {0}</value>
   </data>
-	<data name="QueueFormat_Frames" xml:space="preserve">
+  <data name="QueueFormat_Frames" xml:space="preserve">
     <value>Fr {0}-{1}</value>
   </data>
-	<data name="QueueRangeAll" xml:space="preserve">
+  <data name="QueueRangeAll" xml:space="preserve">
     <value>All</value>
   </data>
-	<data name="CouldNotCopyLogError" xml:space="preserve">
+  <data name="CouldNotCopyLogError" xml:space="preserve">
     <value>Could not copy log:{0}{0}{1}</value>
   </data>
-	<data name="OpenLog" xml:space="preserve">
+  <data name="OpenLog" xml:space="preserve">
     <value>Open Log</value>
   </data>
-	<data name="CopyLog" xml:space="preserve">
+  <data name="CopyLog" xml:space="preserve">
     <value>Copy Log</value>
   </data>
-	<data name="PresetDiscardConfirmMessage" xml:space="preserve">
+  <data name="PresetDiscardConfirmMessage" xml:space="preserve">
     <value>You have unsaved changes. Are you sure you want to discard these changes by switching to another preset?</value>
   </data>
-	<data name="PresetDiscardConfirmTitle" xml:space="preserve">
+  <data name="PresetDiscardConfirmTitle" xml:space="preserve">
     <value>Discard Changes?</value>
   </data>
 </root>
