Added ability to automatically resume the queue when restarting VidCoder. If the encode ends with an error and the worker process is still running, we kill it.
--HG--
branch : beta

--- a/VidCoder/Resources/OptionsRes.resx
+++ b/VidCoder/Resources/OptionsRes.resx
@@ -390,4 +390,7 @@
 	<data name="OpenLogFolderButton" xml:space="preserve">
     <value>Open Log Folder</value>
   </data>
+	<data name="ResumeEncodingOnRestartCheckBox" xml:space="preserve">
+    <value>Automatically resume encoding on restart</value>
+  </data>
 </root>
