--- a/VidCoder/Resources/OptionsRes.resx
+++ b/VidCoder/Resources/OptionsRes.resx
@@ -393,4 +393,7 @@
 	<data name="ResumeEncodingOnRestartCheckBox" xml:space="preserve">
     <value>Automatically resume encoding on restart</value>
   </data>
+	<data name="UseWorkerProcessCheckBox" xml:space="preserve">
+    <value>Use worker process to encode</value>
+  </data>
 </root>
