--- a/VidCoder/Resources/CommonRes.resx
+++ b/VidCoder/Resources/CommonRes.resx
@@ -138,6 +138,7 @@ A full copy of the GNU General Public License has been included along with this 
   </data>
   <data name="QueueColumnNameRange" xml:space="preserve">
     <value>Range</value>
+    <comment>The label for the queue column that specifies what portion of the video to encode. (Like 25:23 - 37:50)</comment>
   </data>
   <data name="QueueColumnNameDestination" xml:space="preserve">
     <value>Destination</value>
@@ -171,9 +172,11 @@ A full copy of the GNU General Public License has been included along with this 
   </data>
   <data name="Default" xml:space="preserve">
     <value>Default</value>
+    <comment>Usually used in settings, when there is a default option. For example for Decomb there is Off, Default, Fast, Bob and Custom.</comment>
   </data>
   <data name="Custom" xml:space="preserve">
     <value>Custom</value>
+    <comment>Usually used in settings, when there is a default option. For example for Decomb there is Off, Default, Fast, Bob and Custom.</comment>
   </data>
   <data name="Browse" xml:space="preserve">
     <value>Browse...</value>
@@ -189,12 +192,14 @@ A full copy of the GNU General Public License has been included along with this 
   </data>
   <data name="Off" xml:space="preserve">
     <value>Off</value>
+    <comment>Usually used in settings, when there is a default option. For example for Decomb there is Off, Default, Fast, Bob and Custom.</comment>
   </data>
   <data name="All" xml:space="preserve">
     <value>All</value>
   </data>
   <data name="StreamChoice" xml:space="preserve">
     <value>Stream {0}</value>
+    <comment>Used in the encoding settings dialog to mark which audio stream an audio encoding is targeting. By default the encoding works on all streams but you can target it to affect only the first stream, in which case it would label it "Stream 1"</comment>
   </data>
   <data name="Ok" xml:space="preserve">
     <value>OK</value>
