--- a/VidCoder/Resources/MiscRes.resx
+++ b/VidCoder/Resources/MiscRes.resx
@@ -1,202 +1,224 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-	<!-- 
-		Microsoft ResX Schema
+  <!-- 
+    Microsoft ResX Schema 
+    
+    Version 2.0
+    
+    The primary goals of this format is to allow a simple XML format 
+    that is mostly human readable. The generation and parsing of the 
+    various data types are done through the TypeConverter classes 
+    associated with the data types.
+    
+    Example:
+    
+    ... ado.net/XML headers & schema ...
+    <resheader name="resmimetype">text/microsoft-resx</resheader>
+    <resheader name="version">2.0</resheader>
+    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
+    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
+    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
+        <value>[base64 mime encoded serialized .NET Framework object]</value>
+    </data>
+    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
+        <comment>This is a comment</comment>
+    </data>
+                
+    There are any number of "resheader" rows that contain simple 
+    name/value pairs.
+    
+    Each data row contains a name, and value. The row also contains a 
+    type or mimetype. Type corresponds to a .NET class that support 
+    text/value conversion through the TypeConverter architecture. 
+    Classes that don't support this are serialized and stored with the 
+    mimetype set.
+    
+    The mimetype is used for serialized objects, and tells the 
+    ResXResourceReader how to depersist the object. This is currently not 
+    extensible. For a given mimetype the value must be set accordingly:
+    
+    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    that the ResXResourceWriter will generate, however the reader can 
+    read any of the formats listed below.
+    
+    mimetype: application/x-microsoft.net.object.binary.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
+            : and then encoded with base64 encoding.
+    
+    mimetype: application/x-microsoft.net.object.soap.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
+            : and then encoded with base64 encoding.
 
-		Version 1.3
-
-		The primary goals of this format is to allow a simple XML format 
-		that is mostly human readable. The generation and parsing of the 
-		various data types are done through the TypeConverter classes 
-		associated with the data types.
-
-		Example:
-
-		... ado.net/XML headers & schema ...
-		<resheader name="resmimetype">text/microsoft-resx</resheader>
-		<resheader name="version">1.3</resheader>
-		<resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-		<resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
-		<data name="Name1">this is my long string</data>
-		<data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
-		<data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
-			[base64 mime encoded serialized .NET Framework object]
-		</data>
-		<data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-			[base64 mime encoded string representing a byte array form of the .NET Framework object]
-		</data>
-
-		There are any number of "resheader" rows that contain simple 
-		name/value pairs.
-
-		Each data row contains a name, and value. The row also contains a 
-		type or mimetype. Type corresponds to a .NET class that support 
-		text/value conversion through the TypeConverter architecture. 
-		Classes that don't support this are serialized and stored with the 
-		mimetype set.
-
-		The mimetype is used for serialized objects, and tells the 
-		ResXResourceReader how to depersist the object. This is currently not 
-		extensible. For a given mimetype the value must be set accordingly:
-
-		Note - application/x-microsoft.net.object.binary.base64 is the format 
-		that the ResXResourceWriter will generate, however the reader can 
-		read any of the formats listed below.
-
-		mimetype: application/x-microsoft.net.object.binary.base64
-		value   : The object must be serialized with 
-			: System.Serialization.Formatters.Binary.BinaryFormatter
-			: and then encoded with base64 encoding.
-
-		mimetype: application/x-microsoft.net.object.soap.base64
-		value   : The object must be serialized with 
-			: System.Runtime.Serialization.Formatters.Soap.SoapFormatter
-			: and then encoded with base64 encoding.
-
-		mimetype: application/x-microsoft.net.object.bytearray.base64
-		value   : The object must be serialized into a byte array 
-			: using a System.ComponentModel.TypeConverter
-			: and then encoded with base64 encoding.
-	-->
-	
-	<xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
-		<xsd:element name="root" msdata:IsDataSet="true">
-			<xsd:complexType>
-				<xsd:choice maxOccurs="unbounded">
-					<xsd:element name="data">
-						<xsd:complexType>
-							<xsd:sequence>
-								<xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-								<xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
-							</xsd:sequence>
-							<xsd:attribute name="name" type="xsd:string" msdata:Ordinal="1" />
-							<xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
-							<xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
-						</xsd:complexType>
-					</xsd:element>
-					<xsd:element name="resheader">
-						<xsd:complexType>
-							<xsd:sequence>
-								<xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-							</xsd:sequence>
-							<xsd:attribute name="name" type="xsd:string" use="required" />
-						</xsd:complexType>
-					</xsd:element>
-				</xsd:choice>
-			</xsd:complexType>
-		</xsd:element>
-	</xsd:schema>
-	<resheader name="resmimetype">
-		<value>text/microsoft-resx</value>
-	</resheader>
-	<resheader name="version">
-		<value>1.3</value>
-	</resheader>
-	<resheader name="reader">
-		<value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-	</resheader>
-	<resheader name="writer">
-		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-	</resheader>
-  <data name="AddButton">
-    <value xml:space="preserve">Add</value>
+    mimetype: application/x-microsoft.net.object.bytearray.base64
+    value   : The object must be serialized into a byte array 
+            : using a System.ComponentModel.TypeConverter
+            : and then encoded with base64 encoding.
+    -->
+  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
+    <xsd:element name="root" msdata:IsDataSet="true">
+      <xsd:complexType>
+        <xsd:choice maxOccurs="unbounded">
+          <xsd:element name="metadata">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" />
+              </xsd:sequence>
+              <xsd:attribute name="name" use="required" type="xsd:string" />
+              <xsd:attribute name="type" type="xsd:string" />
+              <xsd:attribute name="mimetype" type="xsd:string" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="assembly">
+            <xsd:complexType>
+              <xsd:attribute name="alias" type="xsd:string" />
+              <xsd:attribute name="name" type="xsd:string" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="data">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
+              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
+              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="resheader">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" />
+            </xsd:complexType>
+          </xsd:element>
+        </xsd:choice>
+      </xsd:complexType>
+    </xsd:element>
+  </xsd:schema>
+  <resheader name="resmimetype">
+    <value>text/microsoft-resx</value>
+  </resheader>
+  <resheader name="version">
+    <value>2.0</value>
+  </resheader>
+  <resheader name="reader">
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </resheader>
+  <resheader name="writer">
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </resheader>
+  <data name="AddButton" xml:space="preserve">
+    <value>Add</value>
   </data>
-  <data name="RefreshButton">
-    <value xml:space="preserve">Refresh</value>
+  <data name="RefreshButton" xml:space="preserve">
+    <value>Refresh</value>
   </data>
-  <data name="ChooseFromProcessesLabel">
-    <value xml:space="preserve">Choose from existing processes:</value>
+  <data name="ChooseFromProcessesLabel" xml:space="preserve">
+    <value>Choose from existing processes:</value>
   </data>
-  <data name="AddAutoPauseProcessDialogTitle">
-    <value xml:space="preserve">Add Auto Pause Process</value>
+  <data name="AddAutoPauseProcessDialogTitle" xml:space="preserve">
+    <value>Add Auto Pause Process</value>
   </data>
-  <data name="ProcessNameLabel">
-    <value xml:space="preserve">Process Name:</value>
+  <data name="ProcessNameLabel" xml:space="preserve">
+    <value>Process Name:</value>
   </data>
-  <data name="ExceptionDialogMainText">
-    <value xml:space="preserve">VidCoder has experienced an unexpected error.</value>
+  <data name="ExceptionDialogMainText" xml:space="preserve">
+    <value>VidCoder has experienced an unexpected error.</value>
   </data>
-  <data name="ExceptionDialogSubText">
-    <value xml:space="preserve">Please report this so it can be fixed in the future.</value>
+  <data name="ExceptionDialogSubText" xml:space="preserve">
+    <value>Please report this so it can be fixed in the future.</value>
   </data>
-  <data name="ExceptionWindowTitle">
-    <value xml:space="preserve">Exception</value>
+  <data name="ExceptionWindowTitle" xml:space="preserve">
+    <value>Exception</value>
   </data>
-  <data name="FileConflictDialogTitle">
-    <value xml:space="preserve">File conflict</value>
+  <data name="FileConflictDialogTitle" xml:space="preserve">
+    <value>File conflict</value>
   </data>
-  <data name="OverwriteButton">
-    <value xml:space="preserve">Overwrite</value>
+  <data name="OverwriteButton" xml:space="preserve">
+    <value>Overwrite</value>
   </data>
-  <data name="AutoRenameButton">
-    <value xml:space="preserve">Auto-rename</value>
+  <data name="AutoRenameButton" xml:space="preserve">
+    <value>Auto-rename</value>
   </data>
-  <data name="FileConflictWarning">
-    <value xml:space="preserve">A file already exists at {0}. Do you want to overwrite the file, automatically find a new output path for the encode job or cancel the operation?</value>
+  <data name="FileConflictWarning" xml:space="preserve">
+    <value>A file already exists at {0}. Do you want to overwrite the file, automatically find a new output path for the encode job or cancel the operation?</value>
   </data>
-  <data name="QueueFileConflictWarning">
-    <value xml:space="preserve">A queue job already has an output path at {0}. Do you want to overwrite the file, automatically find a new output path for the encode job or cancel the operation?</value>
+  <data name="QueueFileConflictWarning" xml:space="preserve">
+    <value>A queue job already has an output path at {0}. Do you want to overwrite the file, automatically find a new output path for the encode job or cancel the operation?</value>
   </data>
-  <data name="QueueColumnsDialogTitle">
-    <value xml:space="preserve">Queue Columns</value>
+  <data name="QueueColumnsDialogTitle" xml:space="preserve">
+    <value>Queue Columns</value>
   </data>
-  <data name="QueueColumnsDialogHeaderText">
-    <value xml:space="preserve">Drag and drop to add, remove or reorder columns.</value>
+  <data name="QueueColumnsDialogHeaderText" xml:space="preserve">
+    <value>Drag and drop to add, remove or reorder columns.</value>
   </data>
-  <data name="UnusedColumns">
-    <value xml:space="preserve">Unused columns</value>
+  <data name="UnusedColumns" xml:space="preserve">
+    <value>Unused columns</value>
   </data>
-  <data name="UsedColumns">
-    <value xml:space="preserve">Used columns</value>
+  <data name="UsedColumns" xml:space="preserve">
+    <value>Used columns</value>
   </data>
-  <data name="ScanMultipleWindowTitle">
-    <value xml:space="preserve">Scanning files...</value>
+  <data name="ScanMultipleWindowTitle" xml:space="preserve">
+    <value>Scanning files...</value>
   </data>
-  <data name="UpdateSuccessDialogTitle">
-    <value xml:space="preserve">Success</value>
+  <data name="UpdateSuccessDialogTitle" xml:space="preserve">
+    <value>Success</value>
   </data>
-  <data name="UpdateSuccessDialogMessage">
-    <value xml:space="preserve">VidCoder has been successfully updated.</value>
+  <data name="UpdateSuccessDialogMessage" xml:space="preserve">
+    <value>VidCoder has been successfully updated.</value>
   </data>
-  <data name="AboutVidCoderDialogTitle">
-    <value xml:space="preserve">About VidCoder</value>
+  <data name="AboutVidCoderDialogTitle" xml:space="preserve">
+    <value>About VidCoder</value>
   </data>
-  <data name="LicenseLabel">
-    <value xml:space="preserve">License:</value>
+  <data name="LicenseLabel" xml:space="preserve">
+    <value>License:</value>
   </data>
-  <data name="Version">
-    <value xml:space="preserve">Version</value>
+  <data name="Version" xml:space="preserve">
+    <value>Version</value>
   </data>
-  <data name="BasedOnHandBrake">
-    <value xml:space="preserve">Based on HandBrake (svn {0})</value>
+  <data name="BasedOnHandBrake" xml:space="preserve">
+    <value>Based on HandBrake (svn {0})</value>
   </data>
-  <data name="Copyright">
-    <value xml:space="preserve">© {0} VidCoder Developers</value>
+  <data name="Copyright" xml:space="preserve">
+    <value>© {0} VidCoder Developers</value>
   </data>
-  <data name="VersionFormat">
-    <value xml:space="preserve">{0} ({1})</value>
+  <data name="VersionFormat" xml:space="preserve">
+    <value>{0} ({1})</value>
     <comment>First is version, second is architecture. For example: 1.4.2 (x64)</comment>
   </data>
-  <data name="BetaVersionFormat">
-    <value xml:space="preserve">{0} Beta ({1})</value>
+  <data name="BetaVersionFormat" xml:space="preserve">
+    <value>{0} Beta ({1})</value>
     <comment>First is version, second is architecture. For example: 1.4.2 Beta (x64)</comment>
   </data>
-  <data name="PresetNameDialogTitle">
-    <value xml:space="preserve">Name Preset</value>
+  <data name="PresetNameDialogTitle" xml:space="preserve">
+    <value>Name Preset</value>
   </data>
-  <data name="ChoosePresetName">
-    <value xml:space="preserve">Choose a name for the preset:</value>
+  <data name="ChoosePresetName" xml:space="preserve">
+    <value>Choose a name for the preset:</value>
   </data>
-  <data name="ApplyUpdateDialogTitle">
-    <value xml:space="preserve">Apply Update?</value>
+  <data name="ApplyUpdateDialogTitle" xml:space="preserve">
+    <value>Apply Update?</value>
   </data>
-  <data name="ApplyUpdateDialogMessage">
-    <value xml:space="preserve">An update has been downloaded. Do you want to apply it now?</value>
+  <data name="ApplyUpdateDialogMessage" xml:space="preserve">
+    <value>An update has been downloaded. Do you want to apply it now?</value>
   </data>
-  <data name="ViewFullChangelog">
-    <value xml:space="preserve">View full Changelog</value>
+  <data name="ViewFullChangelog" xml:space="preserve">
+    <value>View full Changelog</value>
   </data>
-  <data name="DisableUpdatesButton">
-    <value xml:space="preserve">Disable Updates</value>
+  <data name="DisableUpdatesButton" xml:space="preserve">
+    <value>Disable Updates</value>
+  </data>
+  <data name="BasedOnHandBrakeStable" xml:space="preserve">
+    <value>Based on HandBrake ({0})</value>
   </data>
 </root>
